[tool.poetry]
name = "mbctl"
version = "0.1.0"
description = ""
authors = ["lrossett <lrossett@redhat.com>"]

[tool.poetry.scripts]
mbctl = 'mbctl.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
setuptools-rust = "^0.12.1"
requests_kerberos = "^0.12.0"
terminaltables = "^3.1.0"
GitPython = "^3.1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.4"
requests_mock = "^1.8.0"
pytest-mock = "^3.5.1"
dephell = "^0.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}